--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>xyz.enhorse</groupId>
-    <artifactId>commons</artifactId>
+    <artifactId>mailer</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
