Extend Configuration with some additional fields "smtp.port" "smtp.starttls.enable" "mail.recipient"

--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -1,7 +1,10 @@
 service.handler=/mailer
 service.port=50465
+mail.recipient=box@domain.zone
 smtp.server=smtp.gmail.com
-smtp.auth.required=true
-smtp.use.secure=true
+smtp.port=587
+smtp.auth.require=true
+smtp.ssl.enable=true
+smtp.starttls.enable=true
 smtp.username=user
 smtp.password=password
