--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <url>https://enhorse.xyz</url>
 
     <properties>
-        <start-class>xyz.enhorse.site.Mailer</start-class>
+        <start-class>xyz.enhorse.site.Application</start-class>
 
         <java.version>1.8</java.version>
         <maven.compiler.version>3.3</maven.compiler.version>
