Add first implementation of sending mails vial Mailer.class

--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -1,6 +1,6 @@
 service.handler=/mailer
 service.port=50465
-mail.recipient=box@domain.zone
+mail.recipient=recipient@domain.com
 smtp.server=smtp.gmail.com
 smtp.port=587
 smtp.auth.require=true
