Add utility SMTP classes

--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -1,10 +1,10 @@
+debug=true
 service.handler=/mailer
 service.port=50465
-mail.recipient=recipient@domain.com
-smtp.server=smtp.gmail.com
-smtp.port=587
-smtp.auth.require=true
-smtp.ssl.enable=true
-smtp.starttls.enable=true
-smtp.username=user
+recipient.email=recipient@domain.com
+smtp.host=smtp.domain.com
+smtp.ssl=true
+smtp.tls=true
+smtp.auth=true
+smtp.user=user
 smtp.password=password
