--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>site-mailer</name>
+    <description>site-mailer</description>
     <url>https://enhorse.xyz</url>
 
     <properties>
