--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+
+        <junit.version>4.12</junit.version>
+        <mockito.version>1.10.19</mockito.version>
         <slf4j.version>1.7.13</slf4j.version>
         <jetty.version>9.4.0.M0</jetty.version>
+        <json-io.version>4.5.0</json-io.version>
     </properties>
 
     <dependencies>
@@ -30,6 +34,18 @@
             <groupId>xyz.enhorse</groupId>
             <artifactId>commons</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- Tests -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
         </dependency>
         <!-- Logging -->
         <dependency>
@@ -59,6 +75,13 @@
             <artifactId>javax.mail-api</artifactId>
             <version>1.5.5</version>
         </dependency>
+        <!-- JSON Parser -->
+        <dependency>
+            <groupId>com.cedarsoftware</groupId>
+            <artifactId>json-io</artifactId>
+            <version>${json-io.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
