Add sender.email property as default sender's email. Original sender's email is added to content. That's solves issue with DMARC records of original sender's email

--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -1,10 +1,14 @@
-debug=true
+service.debug=true
+
 service.handler=/mailer
 service.port=50465
-recipient.email=recipient@domain.com
-smtp.host=smtp.domain.com
-smtp.ssl=true
-smtp.tls=true
-smtp.auth=true
-smtp.user=user
-smtp.password=password
+recipient.email=pavel13kalinin@gmail.com
+sender.email=mail@enhorse.xyz
+redirect.to.success=/messages/mail_success.html
+redirect.to.fail=/messages/mail_fail.html
+smtp.debug=true
+smtp.host=aspmx.l.google.com
+smtp.auth=false
+smtp.ssl=false
+smtp.tls=false
+smtp.x-mailer=site-mailer for enhorse.xyz
