--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -1,14 +1,30 @@
+#turn on/off debug mode for service
 service.debug=true
-
+#service path handler
 service.handler=/mailer
+#service port
 service.port=50465
-recipient.email=pavel13kalinin@gmail.com
-sender.email=mail@enhorse.xyz
-redirect.to.success=/messages/mail_success.html
-redirect.to.fail=/messages/mail_fail.html
+#email address from which emails are coming
+email.from=mailer@enhorse.xyz
+#email address of recipient of casual messages
+email.to=pavel13kalinin@gmail.com
+#email address of recipient of error messages
+email.admin=go2amd@gmail.com
+#turn on/off debug mode for javax.mail
 smtp.debug=true
+#SMTP server address
 smtp.host=aspmx.l.google.com
+#SMTP port
+smtp.port=25
+#SMTP server requires authentication
 smtp.auth=false
+#SMTP server user
+smtp.user=username
+#SMTP server password
+smtp.password=password
+#SMTP server requires SSL
 smtp.ssl=false
+#SMTP server requires TLS
 smtp.tls=false
+#value of the RFC's header "X-Mailer"
 smtp.x-mailer=site-mailer for enhorse.xyz
