--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -7,11 +7,11 @@ service.port=50465
 #email address from which emails are coming
 email.from=mailer@enhorse.xyz
 #email address of recipient of casual messages
-email.to=pavel13kalinin@gmail.com
+email.to=enhorse.xyz@gmail.com
 #email address of recipient of error messages
-email.admin=go2amd@gmail.com
+email.admin=pavel13kalinin@gmail.com
 #turn on/off debug mode for javax.mail
-smtp.debug=true
+smtp.debug=false
 #SMTP server address
 smtp.host=aspmx.l.google.com
 #SMTP port
@@ -26,5 +26,5 @@ smtp.password=password
 smtp.ssl=false
 #SMTP server requires TLS
 smtp.tls=false
-#value of the RFC's header "X-Mailer"
+#value for the RFC's header "X-Mailer"
 smtp.x-mailer=site-mailer for enhorse.xyz
