Add "jetty.debug" property
Setup logging processes through an application's lifetime

--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -1,23 +1,21 @@
-#turn on/off debug mode for service
-service.debug=true
 #service path handler
 service.handler=/mailer
 #service port
 service.port=50465
+
 #email address from which emails are coming
 email.from=mailer@enhorse.xyz
 #email address of recipient of casual messages
 email.to=enhorse.xyz@gmail.com
 #email address of recipient of error messages
 email.admin=pavel13kalinin@gmail.com
-#turn on/off debug mode for javax.mail
-smtp.debug=false
+
 #SMTP server address
 smtp.host=aspmx.l.google.com
 #SMTP port
 smtp.port=25
 #SMTP server requires authentication
-smtp.auth=false
+smtp.auth=true
 #SMTP server user
 smtp.user=username
 #SMTP server password
@@ -28,3 +26,9 @@ smtp.ssl=false
 smtp.tls=false
 #value for the RFC's header "X-Mailer"
 smtp.x-mailer=site-mailer for enhorse.xyz
+#turn on/off debug mode for application
+service.debug=false
+#turn on/off debug mode for javax.mail
+smtp.debug=false
+#turn on/off debug for jetty embedded server
+jetty.debug=false
