Add project description

--- a/src/test/resources/test.access.properties
+++ b/src/test/resources/test.access.properties
@@ -1,34 +1,32 @@
-#service path handler
+#service path handler [REQUIRED]
 service.handler=/mailer
-#service port
+#service port [REQUIRED]
 service.port=50465
-
-#email address from which emails are coming
-email.from=mailer@enhorse.xyz
-#email address of recipient of casual messages
+#email address of recipient of messages  [REQUIRED]
 email.to=enhorse.xyz@gmail.com
-#email address of recipient of error messages
+#email address from which emails are coming [by default = email.to]
+email.from=mailer@enhorse.xyz
+#email address of recipient of error messages [by default = email.to]
 email.admin=pavel13kalinin@gmail.com
-
-#SMTP server address
+#SMTP server address [REQUIRED]
 smtp.host=aspmx.l.google.com
-#SMTP port
+#SMTP port [by default = 25 or 465, if smtp.tls = true or smtp.ssl = true]
 smtp.port=25
-#SMTP server requires authentication
+#SMTP server requires authentication [by default = false]
 smtp.auth=true
-#SMTP server user
+#SMTP server user [by default = ""]
 smtp.user=username
-#SMTP server password
+#SMTP server password [by default = ""]
 smtp.password=password
-#SMTP server requires SSL
+#SMTP server requires SSL [by default = false]
 smtp.ssl=false
-#SMTP server requires TLS
+#SMTP server requires TLS [by default = false]
 smtp.tls=false
-#value for the RFC's header "X-Mailer"
+#value for the RFC's header "X-Mailer" [by default = ""]
 smtp.x-mailer=site-mailer for enhorse.xyz
-#turn on/off debug mode for application
+#turn on/off debug mode for the application [by default = false]
 service.debug=false
-#turn on/off debug mode for javax.mail
+#turn on/off debug mode for javax.mail [by default = false]
 smtp.debug=false
-#turn on/off debug for jetty embedded server
+#turn on/off debug for jetty embedded server [by default = false]
 jetty.debug=false
